welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: '=' expected but 'new' found.
  var T new Array[Color](getMondeHauteur());
        ^Array1:3: error: illegal start of simple expression
  var T new Array[Color](getMondeHauteur());
                                           ^